# src/controllers/administrador.ts
@@ -23,6 +23,7 @@ function cadastro(req: Request, res: Response) {
         email: req.body.email,
         senha: req.body.senha,
         cnpj: req.body.cnpj, //PODE SER VAZIO
+        telefone: req.body.telefone,
         role: "administrador"
     }
     generics.cadastro(req, res, requisicao, userModel, administradorModel);
