# src/controllers/provedor.ts
@@ -22,6 +22,7 @@ function cadastro(req: Request, res: Response) {
         email: req.body.email,
         senha: req.body.senha,
         cnpj: req.body.cnpj, //PODE SER VAZIO
+        telefone: req.body.telefone,
         role: "provedor"
     }
     generics.cadastro(req, res, requisicao, userModel, provedorModel)
