# src/swagger.json
@@ -62,6 +62,9 @@
                                     "sexo": {
                                         "type": "string"
                                     },
+                                    "telefone": {
+                                        "type": "string"
+                                    },
                                     "email": {
                                         "type": "string",
                                         "format": "email"
@@ -193,6 +196,9 @@
                                     "sexo": {
                                         "type": "string"
                                     },
+                                    "telefone": {
+                                        "type": "string"
+                                    },
                                     "email": {
                                         "type": "string",
                                         "format": "email"
@@ -311,6 +317,9 @@
                                     "email": {
                                         "type": "string",
                                         "format": "email"
+                                    },
+                                    "telefone": {
+                                        "type": "string"
                                     },
                                     "senha": {
                                         "type": "string"
